--- a/style.css
+++ b/style.css
@@ -35,6 +35,17 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 75px;
+    margin-bottom: 25px;
+}
+
+@media (max-width: 800px) {
+    #lists {
+        flex-direction: column;
+        align-items: center;
+    }
+    .list {
+        margin-bottom: 75px;
+    }
 }
 
 .list {
